--- a/src/app/app.css
+++ b/src/app/app.css
@@ -16,6 +16,16 @@
   padding: 0;
 }
 
+.calendar {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+
+  padding: 16px;
+}
+
 :global(.rbc-time-content) {
   visibility: hidden;
 
