--- a/src/app/app.css
+++ b/src/app/app.css
@@ -115,29 +115,17 @@
   text-decoration: none;
 }
 
-:global(.event-link) {
-  display: block;
-  overflow: hidden;
-
-  max-width: 100%;
-  height: 16px;
-  padding: 0 4px;
-
-  text-decoration: none;
-  text-overflow: ellipsis;
-
-  color: white;
-  border-radius: 3px;
-
-  line-height: 13px;
-}
-
 :global(.event-link:hover) {
   text-decoration: none;
 }
 
 :global(.rbc-event-content) {
   height: 18px;
+  margin-right: 0;
+  margin-left: 0;
+}
+
+:global(.rbc-row-segment) {
   margin-right: 0;
   margin-left: 0;
 }
@@ -153,7 +141,40 @@
   background-color: transparent;
 }
 
-:global(.event-style) {
+:global(.event-link) {
+  overflow: hidden;
+
+  max-width: 100%;
+  height: 16px;
+  padding: 0 4px;
+
+  text-decoration: none;
+  text-overflow: ellipsis;
+
+  color: white;
+  border-radius: 3px;
+
+  line-height: 13px;
+}
+
+:global(.custom-field-icon) {
+  width: 10px;
+  height: 10px;
+  margin: 4px;
+
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+}
+
+:global(.event-container) {
+  display: flex;
+  overflow: hidden;
+  flex-direction: column;
+
+  width: 100%;
+  height: 16px;
+
   border: 1px solid;
   border-radius: 3px;
 
@@ -162,6 +183,86 @@
   }
 }
 
+:global(.customfields-block-container) {
+  display: flex;
+  overflow: hidden;
+  flex-direction: row;
+
+  margin-top: 16px;
+
+  text-overflow: ellipsis;
+
+  color: var(--ring-secondary-color);
+
+  font-size: var(--ring-font-size-smaller);
+}
+
+:global(.custom-field-block) {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+
+  max-width: 160px;
+  margin-right: 16px;
+}
+
+:global(.custom-field-value) {
+  display: flex;
+  float: right;
+  overflow: hidden;
+
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+:global(.popup-body) {
+  padding: 8px;
+}
+
+:global(.popup-header) {
+  display: flex;
+
+  align-items: baseline;
+  flex-direction: row;
+
+  width: 100%;
+  margin-top: 8px;
+  margin-left: 8px;
+}
+
+:global(.popup-color-scheme-field) {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 16px;
+  height: 16px;
+
+  text-align: center;
+
+  border-radius: 3px;
+}
+
+:global(.issue-popup) {
+  overflow: hidden;
+
+  width: 400px;
+  max-height: 150px;
+}
+
+:global(.issue-dropdown) {
+  width: 100%;
+}
+
+:global(.popup-header-text) {
+  display: block;
+  overflow: hidden;
+
+  width: calc(100% - 32px);
+  margin-left: 8px;
+
+  text-overflow: ellipsis;
+}
 
 :global(.event-resolved) {
   text-decoration: line-through;
