--- a/src/app/app.css
+++ b/src/app/app.css
@@ -259,6 +259,7 @@
 :global(.popup-header-text) {
   display: block;
   overflow: hidden;
+  color: white;
 
   width: calc(100% - 32px);
   margin-left: 8px;
