--- a/src/app/app.css
+++ b/src/app/app.css
@@ -102,7 +102,7 @@
 }
 
 :global(.rbc-event-content) {
-  height: 18px !important;
+  height: 16px !important;
   margin-right: 0;
   margin-left: 0;
 }
@@ -120,6 +120,7 @@
   height: 16px;
   padding: 0;
 
+  border: none !important;
   background-color: transparent;
 }
 
@@ -127,7 +128,7 @@
   overflow: hidden;
 
   max-width: 100%;
-  height: 16px;
+  height: 16px !important;
   padding: 0 4px;
 
   white-space: nowrap;
@@ -168,12 +169,10 @@
 }
 
 :global(.rbc-time-content .event-container) {
-  border-color: transparent !important;
-
-  font-weight: bold;
+  border: 2px solid !important;
 
   &:not(:hover) {
-    font-weight: normal;
+    border: 1px solid !important;
   }
 }
 
