--- a/src/app/app.css
+++ b/src/app/app.css
@@ -156,6 +156,10 @@
   border-radius: 5px;
 }
 
+:global(.rbc-month-view) {
+  height: auto !important;
+}
+
 :global(.event-container) {
   display: flex;
   overflow: hidden;
@@ -261,6 +265,9 @@
   margin-left: 8px;
 
   text-overflow: ellipsis;
+
+  color: rgb(255, 255, 255);
+  mix-blend-mode: difference;
 }
 
 :global(.event-resolved) {
