--- a/src/app/app.css
+++ b/src/app/app.css
@@ -4,8 +4,7 @@
   margin: 0;
   padding: calc(unit * 2);
 
-  background: #fff;
-  background: var(--ring-content-background-color)
+  background: var(--ring-content-background-color);
 
   font-size: font-size;
 }
@@ -83,6 +82,7 @@
 :global(.rbc-show-more) {
   color: var(--ring-main-color);
 
+  border-radius: var(--ring-border-radius);
   font-size: 12px !important;
   font-weight: 400;
   text-decoration-line: none;
@@ -158,7 +158,12 @@
 }
 
 :global(.rbc-month-view) {
+  border-radius: var(--ring-border-radius);
   height: auto !important;
+}
+
+:global(.rbc-time-view) {
+  border-radius: var(--ring-border-radius);
 }
 
 :global(.event-container) {
