--- a/src/app/style/widget.scss
+++ b/src/app/style/widget.scss
@@ -12,7 +12,7 @@
   &__no-filters {
     margin: $ring-unit 4px;
 
-    color: $ring-dark-gray-color;
+    color: var(--ring-secondary-color);
   }
 
   &__filters-list {
