--- a/src/app/app.css
+++ b/src/app/app.css
@@ -7,6 +7,7 @@
 
   background: var(--ring-content-background-color);
 
+  font-family: var(--ring-font-family);
   font-size: var(--ring-font-size);
 }
 
